# mytool

./: README.md  pyproject.toml
docs/: LAYERED_RELATIONSHIP_DB.md  VISION.md
examples/work_notes/: README.md  profile.yaml  sample_commands.sh
src/mytool/: __init__.py  cli.py  graphdb.py  mcp_server.py  profile.py
tests/: test_graphdb.py  test_profile.py
