[project]
name = "mytool"
version = "0.1.0"
description = "SQLite-backed relationship graph DB prototype for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
mytool = "mytool.cli:main"
mytool-mcp = "mytool.mcp_server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
